--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,26 @@
     /* width: 9rem; */
   }
 
+  #myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #0e141d; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 10px; /* Some padding */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 15px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #1a2535; /* Add a dark-grey background on hover */
+}
+
   .btn2 i.fab.fa-github{
     color: #fafafa;
     text-align: center;
