--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,15 @@
     padding-bottom: 2rem
   }
 
+  .header2 {
+    color: #97A9B4;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.7rem;
+    padding-top: 8rem;
+    padding-bottom: 2rem
+  }
+
   .container {
     text-align: center;
   }
@@ -181,7 +190,26 @@
     color: #7289DA;
     transform: rotateY(180deg);
   }
+
+  .prustImg {
+    height: 100%;
+    width: 100%;
+    background-color: #1a2535;
+    transform: scale(.9,.9);
+    transition-duration: .5s; 
+  }
+
+  .prustImg:hover {
+      transform: scale(1.05,1.05);
+      transition-duration: .5s; 
+      box-shadow: 0px 0px 7px 7px #1e1f2080;
+  }
   
+  .prustFeatured {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
   .ourTeam {
     display: flex;
     flex-direction: row;
@@ -220,13 +248,13 @@
     background-color: #1a2535;
     transform: scale(1,1);
     transition-duration: .5s; 
-    box-shadow: 0px 0px 15px 5px #7289DA;
+    /* box-shadow: 0px 0px 15px 5px #7289DA; */
   }
 
   .nav {
     box-shadow: 0 1px 0 #1a2535;
     padding-bottom: 1rem;
-    padding-left: 50rem;
+    padding-left: 35rem;
   }
 
   .nav li a {
@@ -420,6 +448,36 @@
     /* width: 9rem; */
   }
 
+  .btn6.btn-outline-dark {
+    font-size: 1rem;
+    color: #fafafa;
+    background-color: #0e141d;
+    border-radius: .5rem;
+    border: solid .75px #1a2535;
+    display: flexbox;
+    margin-left: 1.6rem;
+  	flex-wrap: nowrap;
+	  justify-content: space-evenly;
+    padding: .5rem;
+    text-decoration: none;
+    /* width: 9rem; */
+  }
+  
+  .btn6.btn-outline-dark:hover {
+    font-size: 1rem;
+    color: #fafafa;
+    background-color: #1a2535;
+    border-radius: .5rem;
+    border: solid .75px #0e141d;
+    display: flexbox;
+    margin-left: 1.6rem;
+  	flex-wrap: nowrap;
+	  justify-content: space-evenly;
+    padding: .5rem;
+    text-decoration: none;
+    /* width: 9rem; */
+  }
+
   #myBtn {
   display: none; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
@@ -505,12 +563,6 @@
       transition-duration: .5s;
       border: solid 1px #1a2535;
       box-shadow: 0 0 15px #1a2535;
-    }
-
-    .ourTeam {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
     }
 
     .btn.btn-outline-dark {
