archive prust + remove from navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,7 +482,7 @@
     /* width: 9rem; */
   }
 
-  #myBtn {
+  #toTopBtn {
   display: none; /* Hidden by default */
   position: fixed; /* Fixed/sticky position */
   bottom: 20px; /* Place the button at the bottom of the page */
@@ -498,7 +498,7 @@
   font-size: 15px; /* Increase font size */
 }
 
-#myBtn:hover {
+#toTopBtn:hover {
   background-color: #1a2535; /* Add a dark-grey background on hover */
 }
 
